Url no depricated version of url resolution
Signed-off-by: Gulshan <kumargu@amazon.com>